fixed alignment and format of navbar popup

--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -26,12 +26,12 @@
   .popupContent {
     position: absolute;
     right: 0px;
-    top: 94px;
+    top: 5.313rem;
     background-color: var(--darkBrown);
     padding: 10px;
     z-index: 1;
     box-shadow: 0px 9px 9px -6px rgba(0,0,0,0.49);
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     width: 14.375rem;
     height: 13.75rem;
     display: flex;
@@ -44,7 +44,9 @@
   .popupContent > div{
     width: 100%;
     transition:0.3s;
+    border-radius: 0.938rem;
   }
+
   .popupContent > div > a{
     display: flex;
     flex-direction: row;
@@ -55,7 +57,19 @@
     color: white;
     text-decoration: none;
   }
+
   .popupContent > div:hover{
     background-color: var(--chocolateBrown);
     transition:0.3s;
+  }
+
+  .popupContent > div > a > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 55%;
+    gap: 1rem;
+    color: white;
+    text-decoration: none;
   }
